# IoT_Assessment3

./: .gitignore  README.md
node1/node1/: node1.ino
node1/node1-service/: .env.example  pyproject.toml
node1/node1-service/node1_service/: main.py
node1/node1-service/node1_service/models/: base.py  configuration.py  inserts.py  sensor_log.py
node1/node1-service/node1_service/services/: database_service.py  main_service.py  mqtt_service.py
node1/node1-service/node1_service/utils/: arduino_helpers.py  commands.py
node1/node1-service/tests/: test_node1_service.py
node2/node2/: node2.ino
node2/node2-service/: .env.example  pyproject.toml
node2/node2-service/node2_service/: main.py
node2/node2-service/node2_service/models/: base.py  cover_state.py  inserts.py  plant_cond.py
node2/node2-service/node2_service/services/: database_service.py  main_service.py  mqtt_service.py
node2/node2-service/node2_service/utils/: arduino_helpers.py  commands.py
node2/node2-service/tests/: test_node2_service.py
node3/node3/: node3.ino
node3/node3-service/: .env.example  pyproject.toml
node3/node3-service/node3_service/: main.py
node3/node3-service/node3_service/models/: configuration.py  inserts.py  water_pump_log.py
node3/node3-service/node3_service/services/: database_service.py  main_service.py  mqtt_service.py
node3/node3-service/node3_service/utils/: arduino_helpers.py  commands.py
node3/node3-service/tests/: test_node3_service.py
tempestas-api/: .env.example  README.md  package-lock.json  package.json
tempestas-api/src/: app.module.ts  app.service.ts  main.ts
tempestas-api/test/: app.e2e-spec.ts
tempestas-dashboard/: .env.example  README.md  nuxt.config.js  package-lock.json  package.json
tempestas-dashboard/components/: Dashboard.vue  Navbar.vue  Overview.vue  WaterCard.vue  WeatherCard.vue
tempestas-dashboard/dto/: node1_configuration_dto.ts  node1_sensor_log_dto.ts  node3_configuration_dto.ts  node3_water_pump_log_dto.ts  node_status_dto.ts  (+1 more)
weather-lambda/: .env.example  pyproject.toml
weather-lambda/tests/: test_weather_lambda.py
weather-lambda/weather_lambda/: main.py
weather-lambda/weather_lambda/models/: inserts.py  weather_data.py
weather-lambda/weather_lambda/services/: database_service.py  main_service.py  mqtt_service.py
(+57 files in other folders)
